I added overflow-x: hidden; to html and body tag to prevent horizontal scrolling

--- a/css/general.css
+++ b/css/general.css
@@ -49,6 +49,7 @@ html {
   /* 10px / 16 = 0.625 = 62.5% */
   /* Percentage of users browsers font-size settings */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -56,6 +57,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 /* *************************** */
